# xye

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  ChangeLog  GAMEINTRO.txt  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  ReadMe.html  acinclude.m4  autogen.sh  build-linux.sh  build-win32.sh  clean.sh  configure  configure.in  cross-configure.sh  description-pak  format.txt  install.cmake  mkinstalldirs  readme.txt  resource.rc  template.xye.xml  xye.desktop
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
levels/: 5levels.xye  Mic4.xye  Phipps.xye  SuperJustin.xye  Training.kye  cracked.xye  kye.xye  kyeclone.xye  kyetraining.txt  levels.xye  logo.xye  microban.xsb  oldtutorials.xye  pxlevels.xye  sphinx.xye  tutorials.xye  xmas.xye  xyester.xye
res/: classic.xml  classic32.xml  classic_COPYING  clean30.xml  clean40.xcf  clean40.xml  cleanbig.xcf  cleanbig.xml  default.xml  detailed.xcf  detailed.xml  detailed20.xml  detailed30.xml  detailed_COPYING  kye.xcf  xmaskye jr32.xml  xmaskye.xml  xmaskye32.xml  xmaskye_jr.xml  xmaskye_jr32.xml  xye.xcf
src/: Makefile.in  browser.cpp  browser.h  command.cpp  command.h  dialogs.cpp  dialogs.h  editorload.cpp  editorsave.cpp  font.cpp  font.h  gen.cpp  gen.h  kye_script.cpp  kye_script.h  levels.cpp  levels.h  list.cpp  list.h  listbox.cpp  listbox.h  main.cpp  options.cpp  options.h  record.cpp  record.h  resource.rc  skins.cpp  skins.h  vxsdl.cpp  vxsdl.h  window.cpp  window.h  xsb_level.cpp  xsb_level.h  xye.cbp  xye.cpp  xye.depend  xye.h  xye.layout  (+4 more)
src/tinyxml/: xye_tinystr.cpp  xye_tinystr.h  xye_tinyxml.cpp  xye_tinyxml.h  xye_tinyxmlerror.cpp  xye_tinyxmlparser.cpp
